@@ -63,7 +63,7 @@ Available template machines:
   \-- mainbus0
       |-- ram0  (64 MB at offset 0)
       |-- rom0  (4 MB at offset 0xff800000)
-      \-- <a href="components/component_m88k_cpu.html">cpu0</a>  (Motorola 88100, 50 MHz)
+      \-- <a href="components/component_m88k_cpu.html">cpu0</a>  (88100, 50 MHz)
 </pre></td>
  <td valign=top>For experiments with OpenBSD/mvme88k.</td>
  <td valign=top></td>
@@ -77,7 +77,7 @@ Available template machines:
   \-- mainbus0
       |-- ram0  (32 MB at offset 0)
       |-- rom0  (4 MB at offset 0xff800000)
-      \-- <a href="components/component_m88k_cpu.html">cpu0</a>  (Motorola 88000, 50 MHz)
+      \-- <a href="components/component_m88k_cpu.html">cpu0</a>  (88100, 50 MHz)
 </pre></td>
  <td valign=top></td>
  <td valign=top></td>
@@ -91,7 +91,7 @@ Available template machines:
   \-- mainbus0
       |-- ram0  (32 MB at offset 0)
       |-- rom0  (16 MB at offset 0x1fc00000)
-      \-- <a href="components/component_mips_cpu.html">cpu0</a>  (MIPS, 100 MHz)
+      \-- <a href="components/component_mips_cpu.html">cpu0</a>  (5KE, 100 MHz)
 </pre></td>
  <td valign=top></td>
  <td valign=top></td>
